<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:contentDescription="@string/avatar"
            android:background="@drawable/shape_left_rounded"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextContent"
            android:layout_marginTop="8dp"
            android:text="@string/full_name"
            android:textColor="@color/green_500"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_company"
            style="@style/MiniIcon"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/company"
            android:src="@drawable/ic_baseline_account_balance_24"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:tint="@color/green_500" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/TextContentNoMargin.Subtitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/company"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_company"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <ImageView
            android:id="@+id/img_location"
            style="@style/MiniIcon"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/location"
            android:src="@drawable/ic_baseline_location_on_24"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toBottomOf="@+id/img_company"
            app:tint="@color/green_500" />

        <TextView
            android:id="@+id/tv_location"
            style="@style/TextContentNoMargin.Subtitle"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/location"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/img_location"
            app:layout_constraintTop_toBottomOf="@+id/tv_company" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_favorite"
            style="@style/MaterialButtonRounded"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/_0"
            app:icon="@drawable/ic_baseline_favorite_border_24"
            app:iconTint="@color/red_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_share"
            app:layout_constraintTop_toBottomOf="@+id/img_location" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_share"
            style="@style/MaterialButtonRounded"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconTint="@color/blue_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>